polychem/src/atoms/snapshots/polychem__atoms__composition_parser__tests__composition_errors-19.snap
---
source: polychem/src/atoms/composition_parser.rs
description: "chemical_composition(\"eH2O\")"
expression: out
---
  × could not interpret the full input as a valid chemical composition
   ╭────
 1 │ eH2O 
   ·  ▲
   ·  ╰── input was valid up until this point
   ╰────
  help: check the unparsed region for errors, or remove it from the rest of
        the composition

